ECA-1099: add type parameters and change to Integer.valueOf
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10158 37aeb1de-b14b-0410-9a0e-82b28170d228